# OverlapTransformer

./: LICENSE  README.md  requirements.txt
Haomo_Dataset/: README.md
OT_libtorch/: gen_libtorch_model.py
OT_libtorch/ws/: CMakeLists.txt  fast_ot.cpp
config/: config.yml  config_haomo.yml
demo/: com_overlap.py  demo_compute_overlap.py  demo_compute_overlap_sim.py
modules/: loss.py  netvlad.py  overlap_transformer.py  overlap_transformer_haomo.py
test/: test_haomo_topn.py  test_haomo_topn_prepare.py  test_kitti00_PR.py  test_kitti00_PR_prepare.py  test_kitti00_prepare.py  test_kitti00_topN.py
tools/: read_all_sets.py  read_samples.py  read_samples_haomo.py
tools/utils/: com_overlap_yaw.py  gen_depth_data.py  gen_gt_data.py  split_train_val.py  utils.py
train/: training_overlap_transformer_haomo.py  training_overlap_transformer_kitti.py
valid/: valid_seq.py
visualize/: viz_haomo.py  viz_kitti.py
